# curses-game-engine-thing

./: .gitignore  README.md  factorything.py  pyproject.toml  requirements.txt  snake.py
cget/: base.py  entrypoint.py
examples/: factorything.py  snake.py
lib/: base.py  entrypoint.py  widgets.py
